Add showPasteConfirmationDialog to reactive_pin_code_fields.dart

--- a/packages/reactive_pin_code_fields/pubspec.yaml
+++ b/packages/reactive_pin_code_fields/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   reactive_forms: ">=16.0.0 <18.0.0"
-  pin_code_fields: ^7.4.0
+  pin_code_fields:
+    git: https://github.com/nickf2k/pin_code_fields.git
 
 dev_dependencies:
   flutter_test:
